@@ -113,7 +113,9 @@ public abstract class AbstractOpenLayersMapOutputFormat implements GetMapOutputF
             GetMapRequest request = mapContent.getRequest();
             map.put("request", request);
             map.put("yx", String.valueOf(isWms13FlippedCRS(request.getCrs())));
-            map.put("maxResolution", new Double(getMaxResolution(mapContent.getRenderingArea())));
+            map.put(
+                    "maxResolution",
+                    Double.valueOf(getMaxResolution(mapContent.getRenderingArea())));
             ProjectionHandler handler = null;
             try {
                 handler =
@@ -140,7 +142,10 @@ public abstract class AbstractOpenLayersMapOutputFormat implements GetMapOutputF
                 queryString = baseUrl.substring(idx); // include question mark
                 baseUrl = baseUrl.substring(0, idx); // leave out question mark
             }
-            map.put("baseUrl", canonicUrl(baseUrl));
+            final String canonicBaseUrl = canonicUrl(baseUrl);
+            map.put("baseUrl", canonicBaseUrl);
+            // register a protocol-relative base URL for fetching HTML static resources
+            map.put("relBaseUrl", makeProtocolRelativeURL(canonicBaseUrl));
 
             // TODO: replace service path with call to buildURL since it does this
             // same dance
@@ -174,6 +179,12 @@ public abstract class AbstractOpenLayersMapOutputFormat implements GetMapOutputF
         } catch (TemplateException e) {
             throw new ServiceException(e);
         }
+    }
+
+    private String makeProtocolRelativeURL(String url) {
+        if (!url.startsWith("http")) return url;
+        int startFrom = url.startsWith("https://") ? 6 : 5;
+        return url.substring(startFrom);
     }
 
     /**
